2008-01-02  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c [!__GNUC__] (fatal, badusage): Remove
	redundant function declarations.

2008-01-02  Guillem Jover  <guillem@debian.org>

	* src/main.h (struct stat): New forward declaration.

2008-01-02  Guillem Jover  <guillem@debian.org>

	* lib/dpkg.h (warningf): Add PRINTFFORMAT attribute.
	(buffer_copy_setup_PtrInt): Likewise.
	(buffer_copy_setup_PtrPtr): Likewise.
	(buffer_copy_setup_IntPtr): Likewise.
	(buffer_copy_setup_IntInt): Likewise.
	(decompress_cat): Likewise.
	(compress_cat): Likewise.
	* lib/dpkg-db.h (log_message): Likewise.

2008-01-02  Guillem Jover  <guillem@debian.org>

	* lib/dpkg.h (NONRETURNPRINTFFORMAT): Remove macro.
	(ohshit): Use NONRETURNING and PRINTFFORMAT instead of
	NONRETURNPRINTFFORMAT.
	(ohshite): Likewise.
	(badusage): Likewise.
	* utils/start-stop-daemon.c (NONRETURNPRINTFFORMAT): Remove macro.
	(fatal): Use NONRETURNING and PRINTFFORMAT instead of
	NONRETURNPRINTFFORMAT.

2008-01-01  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-buildpackage.pl: Use Dpkg::Compression. Use $comp_regex
	to match compressed diffs and tarballs.

2008-01-01  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* utils/start-stop-daemon.c (do_stop): Do not print 'failed to kill'
	warning when doing pid polling.

2008-01-01  Guillem Jover  <guillem@debian.org>

	* src/archives.c (archivefiles): Remove pointless strdup for execvp
	arguments.

2008-01-01  Ian Zimmerman  <itz@buug.org>

	* scripts/install-info.pl: Ignore wrapped lines when matching
	section titles.

2008-01-01  John Zaitseff  <J.Zaitseff@zap.org.au>

	* dselect/baselist.cc (baselist::wordwrapinfo): Stop processing when
	exceeding infopad line limit, and add a warning message.

2008-01-01  Sven Rudolph  <sr1@loom.sax.de>

	* dselect/baselist.cc (baselist::startdisplay): Set helpscreen_attr
	on monochrome terminals.

2007-12-28  Raphael Hertzog  <hertzog@debian.org>
