@@ -1,4 +1,4 @@
-.TH dpkg\-buildpackage 1 "2007-09-28" "Debian Project" "dpkg utilities"
+.TH dpkg\-buildpackage 1 "2008-01-03" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-buildpackage \- build binary or source packages from sources
 .
@@ -55,8 +55,8 @@ environment variable, which should cause all subsequent make
 invocations to inherit the option. Also adds \fBparallel=\fP\fIjobs\fP
 to the DEB_BUILD_OPTIONS environment variable which allows
 debian/rules files to use this information for their own purposes.
-If no \fB-j\fP option is given, an existing value for \fBparallel\fP will be
-honoured and added to MAKEFLAGS.
+The \fBparallel=\fP\fIjobs\fP in DEB_BUILD_OPTIONS environment variable
+will override the \fB-j\fP value if this option is given.
 .TP
 .BI \-v version
 Use changelog information from all versions strictly later than
