@@ -29,6 +29,8 @@ dpkg (1.14.15) UNRELEASED; urgency=low
     compressed sources. Closes: #458519
   * Promote bzip2 Recommends to Depends for dpkg-dev. Closes: #458521
   * Add lzma to dpkg-dev Depends.
+  * Do not automatically enable -j if DEB_BUILD_OPTIONS contains parallel=n,
+    and allow overriding its value from the environment. Closes: #458589
 
   [ Updated dpkg translations ]
   * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918, #458732
