@@ -1,3 +1,7 @@
+2008-01-03  Guillem Jover  <guillem@debian.org>
+
+	* dpkg-buildpackage.1: Document new -j behaviour.
+
 2008-01-02  Christian Perrier  <bubulle@debian.org>
 
 	* po/fr.po: converted to UTF-8. Updated to 1171t139f74u
