@@ -1,3 +1,9 @@
+2008-01-03  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-buildpackage.pl: Do not automatically enable '-j'
+	if DEB_BUILD_OPTIONS contains parallel=n, and allow overriding
+	its value from the environment.
+
 2008-01-02  Guillem Jover  <guillem@debian.org>
 
 	* utils/start-stop-daemon.c [!__GNUC__] (fatal, badusage): Remove
